docs: add cleanup plan and track automation enhancement
Address PR review comments:
1. Add cleanup section with steps to disable NMT after investigation
2. Create issue #177 to track automation enhancement opportunity

NMT adds 5-10% overhead and should be removed once investigation
completes. Future automation would streamline native memory debugging
similar to existing profile-memory-leak.sh script.

Related to #166